<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/idcardbg" >

    <LinearLayout
        android:id="@+id/infolayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lableName"
                style="@style/CardInfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="7dip"
                android:text="@string/name" />

            <TextView
                android:id="@+id/txtName"
                style="@style/CardInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lableSex"
                style="@style/CardInfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="7dip"
                android:text="@string/gender" />

            <TextView
                android:id="@+id/txtSex"
                style="@style/CardInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/lableNation"
                style="@style/CardInfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="7dip"
                android:text="@string/nation" />

            <TextView
                android:id="@+id/txtNation"
                style="@style/CardInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lableBirth"
                style="@style/CardInfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="7dip"
                android:text="@string/birthday" />

            <TextView
                android:id="@+id/txtYear"
                style="@style/CardInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/lableYear"
                style="@style/CardInfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year" />

            <TextView
                android:id="@+id/txtMonth"
                style="@style/CardInfoText"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/lableMonth"
                style="@style/CardInfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month" />

            <TextView
                android:id="@+id/txtDay"
                style="@style/CardInfoText"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/lableDay"
                style="@style/CardInfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lableAddress"
                style="@style/CardInfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="7dip"
                android:text="@string/address" />

            <TextView
                android:id="@+id/txtAddress"
                style="@style/CardInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lableIDNo"
                style="@style/CardInfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="7dip"
                android:text="@string/idno" />

            <TextView
                android:id="@+id/txtIDNo"
                style="@style/CardInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lableAuthor"
                style="@style/CardInfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="7dip"
                android:text="@string/agency" />

            <TextView
                android:id="@+id/txtAuthor"
                style="@style/CardInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lableExpire"
                style="@style/CardInfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="7dip"
                android:text="@string/expire" />

            <TextView
                android:id="@+id/txtValidDate"
                style="@style/CardInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lableCardNo"
                style="@style/CardInfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="7dip"
                android:text="@string/cardNo" />

            <TextView
                android:id="@+id/txtCardNo"
                style="@style/CardInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/photo"
        android:contentDescription="@android:string/unknownName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:background="@android:color/transparent" />

</FrameLayout>