<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_main_bg"
    android:orientation="vertical"
    tools:context=".ui.activity.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/text_login_title"
        android:layout_marginTop="80dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/zz_white"
        android:textSize="20sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/text_short_name"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="3dp"
        android:textColor="@color/zz_white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:background="@drawable/bg_login_frame"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@mipmap/zn_07"/>
            <com.huiyu.tech.zhongxing.widget.ClearEditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/text_hint_account"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:layout_marginLeft="5dp"
                android:background="@null"
                android:lines="1"
                android:layout_gravity="center_vertical"
                android:textColorHint="@color/text_hint"
                android:textColor="@color/zz_white"
                android:textSize="14sp" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:background="@color/text_hint"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="6dp"
            android:layout_height="0.2dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@mipmap/zn_10"/>
            <com.huiyu.tech.zhongxing.widget.ClearEditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/text_hint_pwd"
                android:inputType="textPassword"
                android:layout_marginLeft="5dp"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:background="@null"
                android:lines="1"
                android:layout_gravity="center_vertical"
                android:textColorHint="@color/text_hint"
                android:textColor="@color/zz_white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:background="@drawable/btn_login_selector"
        android:text="@string/btn_login"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:textColor="@color/zz_white"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/tv_face_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:background="@drawable/btn_face_login_selector"
        android:text="@string/btn_face_login"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:textColor="@color/zz_white"
        android:textSize="16sp" />
</LinearLayout>
