<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/zz_white"
    android:orientation="vertical"
    tools:context="com.huiyu.tech.zhongxing.ui.activity.EmergencyHandleActivity">

    <include layout="@layout/title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="36dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="14dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_handle_pic"
                    android:textColor="@color/text_3"
                    android:textSize="15sp" />

                <com.huiyu.tech.zhongxing.widget.MyGridView
                    android:id="@+id/gv_pic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:numColumns="4"
                    android:horizontalSpacing="5dp"
                    android:verticalSpacing="8dp"></com.huiyu.tech.zhongxing.widget.MyGridView>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray_bg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="14dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_handle_video"
                    android:textColor="@color/text_3"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/layout_video"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:visibility="gone"
                        android:layout_marginRight="8dp">

                        <ImageView
                            android:id="@+id/iv_video"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:scaleType="fitXY" />

                        <ImageView
                            android:id="@+id/iv_delete"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:padding="3dp"
                            android:src="@mipmap/icon_del" />
                    </RelativeLayout>

                    <ImageButton
                        android:id="@+id/iv_add_video"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/btn_add_video"
                        android:src="@mipmap/zte_82" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray_bg" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="14dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/text_handle_result"
                    android:textColor="@color/text_3"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_undo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/bg_action_frame"
                    android:paddingBottom="3dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="3dp"
                    android:text="@string/text_undo"
                    android:textColor="@color/main_color"
                    android:textSize="14sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray_bg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="14dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_desc"
                    android:textColor="@color/text_3"
                    android:textSize="15sp" />

                <EditText
                    android:maxLength="100"
                    android:id="@+id/et_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_gray_frame"
                    android:gravity="left|top"
                    android:hint="@string/text_hint_input"
                    android:minHeight="128dp"
                    android:padding="4dp"
                    android:textColor="@color/text_3"
                    android:textColorHint="@color/text_9"
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_commit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/btn_login_selector"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/btn_commit"
                android:textColor="@color/zz_white"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
