<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_bg"
    tools:context="com.huiyu.tech.zhongxing.ui.activity.ModifyPwdActivity">

    <include layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="12dp"
        android:orientation="vertical">

        <com.huiyu.tech.zhongxing.widget.ClearEditText
            android:id="@+id/et_oldpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_3"
            android:textColorHint="@color/text_9"
            android:paddingBottom="8dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:paddingTop="8dp"
            android:hint="@string/text_hint_oldpwd"
            android:paddingLeft="5dp"
            android:inputType="textPassword"
            android:maxLength="20"
            android:background="@drawable/add_suspect_editbg"
            android:textSize="15sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_light_line"/>
        <com.huiyu.tech.zhongxing.widget.ClearEditText
            android:id="@+id/et_newpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_3"
            android:textColorHint="@color/text_9"
            android:paddingBottom="8dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:paddingTop="8dp"
            android:hint="@string/text_hint_newpwd"
            android:paddingLeft="5dp"
            android:inputType="textPassword"
            android:maxLength="20"
            android:background="@drawable/add_suspect_editbg"
            android:textSize="15sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_light_line"/>
        <com.huiyu.tech.zhongxing.widget.ClearEditText
            android:id="@+id/et_newpwd2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_3"
            android:textColorHint="@color/text_9"
            android:paddingBottom="8dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:paddingTop="8dp"
            android:paddingLeft="5dp"
            android:hint="@string/text_hint_newpwd"
            android:inputType="textPassword"
            android:maxLength="20"
            android:background="@drawable/add_suspect_editbg"
            android:textSize="15sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_light_line"/>
        </LinearLayout>
    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:background="@drawable/btn_login_selector"
        android:text="@string/btn_confirm"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="240dp"
        android:textColor="@color/zz_white"
        android:textSize="16sp" />
</LinearLayout>
